1. Удалена групповая валидация 2. Введено сообщение и изменена аннотация валидации параметра numberStudents метода findAll в сервис классе для групп. 3. Добавлен объект, содержащий время, статус и массив ошибок валидации. 4. Переименованы методы маппинга. Лаконичность. 5. В методах PUT введена проверка наличия объекта в БД с выбросом исключения. 6. Расширены сообщения об ошибках 7. Внедрены объект и хендлер для обработки исключения NotFound 8. При валидации параметра метода findAll в контроллере групп изменена аннотация и внедрено сообщение 9. Папка с файлами для обработки пользовательских исключений перенесена в папку api 10. В файл OpenApi добавлены ошибки в ответах с примерами. Добавлен пример для параметра numberStudents
