# src/main/java/ru/zhadaev/api/validation/ValidationError.java
@@ -2,10 +2,13 @@ package ru.zhadaev.api.validation;
 
 import lombok.Data;
 
+import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.List;
 
 @Data
-public class ValidationErrorResponse {
+public class ValidationError {
+    private Timestamp timestamp;
+    private String status;
     private List<Violation> violations = new ArrayList<>();
 }
